--- a/package.json
+++ b/package.json
@@ -6,19 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "next": "13.5.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-essentials": "^8.5.4",
+    "@storybook/addon-interactions": "^8.5.4",
+    "@storybook/addon-onboarding": "^8.5.4",
+    "@storybook/blocks": "^8.5.4",
+    "@storybook/nextjs": "^8.5.4",
+    "@storybook/react": "^8.5.4",
+    "@storybook/test": "^8.5.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.8"
+    "eslint-config-next": "13.5.8",
+    "eslint-plugin-storybook": "^0.11.2",
+    "storybook": "^8.5.4",
+    "typescript": "^5"
   }
 }
