--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.8",
     "eslint-plugin-storybook": "^0.11.2",
+    "sass": "^1.84.0",
     "storybook": "^8.5.4",
     "typescript": "^5"
   }
