--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.8",
     "next-themes": "^0.4.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
